src/snapshots/tui_term__widget__tests__bold_text.snap
---
source: src/widget.rs
expression: view
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "This line will be displayed bold. This should have no style.█                   ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, modifier: BOLD,
        x: 33, y: 0, fg: Reset, bg: Reset, modifier: (empty),
        x: 60, y: 0, fg: Gray, bg: Reset, modifier: (empty),
        x: 61, y: 0, fg: Reset, bg: Reset, modifier: (empty),
    ]
}
