src/snapshots/tui_term__widget__tests__boundary_rows_overshot_no_panic.snap
---
source: src/widget.rs
expression: view
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 4 },
    content: [
        " Cargo.lock      docs         LICENSE               test                    ",
        " Cargo.toml      examples     README.md             typescript              ",
        " CHANGELOG.md    flake.lock   rust-toolchain.toml   wezterm                 ",
        " cliff.toml      flake.nix    src                                            ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 0, fg: Indexed(4), bg: Reset, underline: Reset, modifier: BOLD,
        x: 23, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 0, fg: Indexed(4), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 1, fg: Indexed(4), bg: Reset, underline: Reset, modifier: BOLD,
        x: 27, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 2, fg: Indexed(4), bg: Reset, underline: Reset, modifier: BOLD,
        x: 63, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 3, fg: Indexed(4), bg: Reset, underline: Reset, modifier: BOLD,
        x: 36, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
