src/snapshots/tui_term__widget__tests__inverse_text.snap
---
source: src/widget.rs
expression: view
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "This line will be displayed inversed. This should have no style.█               ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 37, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 0, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 65, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
