src/snapshots/tui_term__widget__tests__overlapping_cursor.snap
---
source: src/widget.rs
expression: view
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "tui-term on  main [$!?] via ❄️pure (tui-term-env)                              ", // hidden by multi-width symbols: [(30, " ")]
        "❯ This is a test for an overlapping cursor                                      ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Indexed(6), bg: Reset, underline: Reset, modifier: BOLD,
        x: 8, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 0, fg: Indexed(5), bg: Reset, underline: Reset, modifier: BOLD,
        x: 18, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 0, fg: Indexed(1), bg: Reset, underline: Reset, modifier: BOLD,
        x: 24, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 0, fg: Indexed(4), bg: Reset, underline: Reset, modifier: BOLD,
        x: 50, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Indexed(2), bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Indexed(9), bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 1, fg: Indexed(6), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 1, fg: Indexed(6), bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 1, fg: Indexed(6), bg: Reset, underline: Reset, modifier: UNDERLINED,
        x: 16, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 1, fg: Indexed(6), bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 1, fg: Indexed(6), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 1, fg: Indexed(6), bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 36, y: 1, fg: Indexed(6), bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
