src/snapshots/tui_term__widget__tests__scrollback_cursor_not_rendered_when_off_screen.snap
---
source: src/widget.rs
expression: view
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 4 },
    content: [
        "[scrollback line 3]                     ",
        "[scrollback line 4]                     ",
        "[scrollback line 5]                     ",
        "[scrollback line 6]                     ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
