src/snapshots/tui_term__widget__tests__scrollback_partial_cursor_visible_at_adjusted_row.snap
---
source: src/widget.rs
expression: view
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 6 },
    content: [
        "[scrollback: shown at row 0]            ",
        "[draw-0: cursor row]                    ",
        "[draw-1]                                ",
        "[draw-2]                                ",
        "[draw-3]                                ",
        "[draw-4]                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
